--- a/MiniMaxTree/MiniMaxTree/MiniMaxTree.csproj
+++ b/MiniMaxTree/MiniMaxTree/MiniMaxTree.csproj
@@ -14,4 +14,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
 </Project>
