--- a/MiniMaxTree/MiniMaxTree/MiniMaxTree.csproj
+++ b/MiniMaxTree/MiniMaxTree/MiniMaxTree.csproj
@@ -18,4 +18,14 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="trained.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
