Fixed multiple bugs with Checkers Minimax and MonteCarlo

--- a/MiniMaxTree/MiniMaxTree/MiniMaxTree.csproj
+++ b/MiniMaxTree/MiniMaxTree/MiniMaxTree.csproj
@@ -19,13 +19,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <None Remove="trained.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="trained.json">
+    <Content Include="trained.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
 </Project>
